added music player

--- a/Resume_HTML/index.html
+++ b/Resume_HTML/index.html
@@ -111,7 +111,7 @@
 					 
 						<h3>Shopping Cart</h3>
 						<li> 
-              This is a Ecommerce Shopping Cart App Having Following functionalities -
+              This is a Ecommerce Shopping Cart App made using react , Having Following functionalities:
 						</li>
 				 
           <li> user can add item in cart using ADD CART button, user cn remove item from cart using REMOVE CART button</li>
